# Pilot-URJC

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  dependencies.repos  dependencies_kobuki.repos  package.xml  turtlebot3.repos
laser_resender/: CMakeLists.txt  package.xml
laser_resender/src/: laser_resender_node.cpp
metacontroller_pilot/: CMakeLists.txt  package.xml  setup.cfg  setup.py
metacontroller_pilot/metacontroller_pilot/: metacontroller.ui  metacontroller_sim.py
metacontroller_pilot/modes_conf/: pilot_modes.yaml
mros_contingencies_sim/: CMakeLists.txt  package.xml  plugins_description.xml
mros_contingencies_sim/include/mros_contingencies_sim/: battery_contingency_node.hpp
mros_contingencies_sim/include/mros_contingencies_sim/rviz_plugin/: mros_contingencies_panel.hpp
mros_contingencies_sim/src/: battery_contingency_node.cpp
mros_contingencies_sim/src/rviz_plugin/: mros_contingencies_panel.cpp
nav2_bt_modes_navigator/: CMakeLists.txt  README.md  package.xml
nav2_bt_modes_navigator/behavior_trees/: navigate_w_replanning.xml  navigate_w_replanning_and_battery_warning.xml  navigate_w_replanning_and_obstacle_detected.xml  navigate_w_replanning_and_recovery.xml
nav2_bt_modes_navigator/include/nav2_bt_modes_navigator/: bt_modes_navigator.hpp  ros_topic_logger.hpp
nav2_bt_modes_navigator/src/: bt_modes_navigator.cpp  main.cpp  ros_topic_logger.cpp
nav2_bt_modes_navigator/system_modes/: nav2_modes.yaml
pilot_behavior/: CMakeLists.txt  package.xml
pilot_behavior/behavior_trees/: bt.xml
pilot_behavior/include/pilot_behavior/: BTActionNode.hpp
pilot_behavior/include/pilot_behavior/behavior_tree_nodes/: CheckOrder.hpp  DeliverOrder.hpp  GetOrder.hpp  InteractWithBarman.hpp  NavigateToBarman.hpp  NavigateToClient.hpp  NavigateToWp.hpp  Recharge.hpp
pilot_behavior/launch/: pilot_urjc_launch.py
pilot_behavior/src/: bt_bica.cpp  pilot_behavior.cpp
pilot_behavior/src/behavior_tree_nodes/: CheckOrder.cpp  DeliverOrder.cpp  GetOrder.cpp  InteractWithBarman.cpp  NavigateToBarman.cpp  NavigateToClient.cpp  NavigateToWp.cpp  Recharge.cpp
pilot_behavior/test/: check_order_test.cpp  deliver_order_test.cpp  get_order_test.cpp  interact_with_barman_test.cpp  navigate_to_barman_test.cpp  navigate_to_client_test.cpp  pilot_integration_test.cpp
pilot_bt_plugins/: CMakeLists.txt  nav2_tree_nodes.xml  package.xml
pilot_bt_plugins/plugins/action/: battery_warning.cpp
pilot_kobuki/: CMakeLists.txt  map.pgm  map.yaml  package.xml
pilot_kobuki/config/: cartographer.lua  default.rviz  hardware.yaml  map.pgm  map.yaml  nav2.yaml
pilot_kobuki/launch/: kobuki2.launch.py
pilot_kobuki/map/: test_lab.yaml  test_lab_old.pgm
pilot_kobuki/params/: params.yaml
pilot_kobuki/src/: laser_filter_node.cpp
pilot_lifecycle_manager/: CMakeLists.txt  package.xml
pilot_lifecycle_manager/include/pilot_lifecycle_manager/: lifecycle_manager.hpp
pilot_lifecycle_manager/src/: lifecycle_manager_node.cpp
pilot_lifecycle_manager/src/pilot_lifecycle_manager/: lifecycle_manager.cpp
pilot_urjc_bringup/: CMakeLists.txt  package.xml
pilot_urjc_bringup/launch/: nav2_bringup_launch.py  nav2_navigation_launch.py  nav2_tiago_urjc_launch.py
pilot_urjc_bringup/launch/tiago/: nav2_tiago_launch.py  tiago_mros_launch.py
pilot_urjc_bringup/launch/turtlebot2_sim/: nav2_turtlebot2_launch.py
pilot_urjc_bringup/launch/turtlebot3_sim/: nav2_turtlebot3_launch.py  tb3_sim_launch.py
pilot_urjc_bringup/maps/: urjc_restaurant.yaml  urjc_test1.yaml
pilot_urjc_bringup/maps/sim/restaurant/: map.yaml
pilot_urjc_bringup/maps/sim/tb3_world/: map.yaml
pilot_urjc_bringup/params/: nav2_tb3_params.yaml  nav2_tiago_params.yaml  pilot_modes.yaml
pilot_urjc_bringup/rviz/: nav2_default_view.rviz
src/: bt_bica.cpp
